<resources>
    <string name="app_name">ProyectoDAM</string>

    <string name="profile_tittle">Perfil</string>
    <string name="refri_tittle">Refri</string>
    <string name="home_tittle">Inicio</string>
    <string name="compra_tittle">Compra</string>
    <string name="exit_tittle">Exit\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile" />
    <string name="Inicio" />
    <string name="Perfil" />
    <string name="producto" />
    <string name="salida" />
    <string name="Refri" />

    <string name="description_img_photo">imagen del producto</string>

</resources>