<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
android:id="@+id/action_profile"
        android:title="@string/profile_tittle"
        app:showAsAction="never"
        android:icon="@drawable/user_icon"
        android:background="@drawable/box_button"
        android:shadowColor="@color/gray"

    />

    <item
        android:id="@+id/action_refrigerator"
        android:title="@string/refri_tittle"
        app:showAsAction="never"
        android:icon="@drawable/refri_icon"
        android:background="@drawable/box_button"
        android:shadowColor="@color/gray"

        />
    <item
        android:id="@+id/action_home"
        android:title="@string/home_tittle"
        app:showAsAction="never"
        android:icon="@drawable/house_icon_asset"
        android:background="@drawable/box_button"
        android:shadowColor="@color/gray"
        />
    <item
        android:id="@+id/action_compra"
        android:title="@string/compra_tittle"
        app:showAsAction="never"
        android:icon="@drawable/producto_icon"
        android:background="@drawable/box_button"
        android:shadowColor="@color/gray"

        />
    <item
        android:id="@+id/action_exit"
        android:title="@string/exit_tittle"
        app:showAsAction="never"
        android:icon="@drawable/salir_icon"
        android:background="@drawable/box_button"
        android:shadowColor="@color/gray"
        />


</menu>